// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StyleSheet/createStyleResolver resolve long form style properties take precedence over shorthand properties 1`] = `
Object {
  "classList": Array [
    "r-paddingHorizontal-5wp0in",
  ],
  "className": "r-paddingHorizontal-5wp0in",
  "style": Object {
    "paddingBottom": "8px",
    "paddingLeft": "40px",
    "paddingRight": "40px",
    "paddingTop": "8px",
  },
}
`;

exports[`StyleSheet/createStyleResolver resolve long form style properties take precedence over shorthand properties 2`] = `
Object {
  "classList": Array [
    "r-marginVertical-1unineu",
  ],
  "className": "r-marginVertical-1unineu",
  "style": Object {
    "marginBottom": "40px",
    "marginLeft": "8px",
    "marginRight": "8px",
    "marginTop": "40px",
  },
}
`;

exports[`StyleSheet/createStyleResolver resolve resolves inline-style pointerEvents to classname 1`] = `
Object {
  "classList": Array [
    "r-pointerEvents-12vffkv",
  ],
  "className": "r-pointerEvents-12vffkv",
}
`;

exports[`StyleSheet/createStyleResolver resolve with register before RTL, resolves to correct className 1`] = `
Object {
  "classList": Array [
    "r-marginRight-zso239",
    "r-right-1bnbe1j",
    "r-textAlign-1ff274t",
  ],
  "className": "r-marginRight-zso239 r-right-1bnbe1j r-textAlign-1ff274t",
}
`;

exports[`StyleSheet/createStyleResolver resolve with register before RTL, resolves to correct className 2`] = `
Object {
  "classList": Array [
    "r-left-2s0hu9",
    "r-marginLeft-1n0xq6e",
    "r-textAlign-fdjqy7",
  ],
  "className": "r-left-2s0hu9 r-marginLeft-1n0xq6e r-textAlign-fdjqy7",
}
`;

exports[`StyleSheet/createStyleResolver resolve with register, resolves to className 1`] = `
Object {
  "classList": Array [
    "r-borderColor-4a18lf",
    "r-borderWidth-1yadl64",
    "r-left-1tsx3h3",
    "r-opacity-icoktb",
    "r-position-u8s1d",
    "r-width-b8lwoo",
  ],
  "className": "r-borderColor-4a18lf r-borderWidth-1yadl64 r-left-1tsx3h3 r-opacity-icoktb r-position-u8s1d r-width-b8lwoo",
}
`;

exports[`StyleSheet/createStyleResolver resolve with register, resolves to className 2`] = `
Object {
  "classList": Array [
    "r-borderColor-4a18lf",
    "r-borderWidth-1yadl64",
    "r-left-1tsx3h3",
    "r-opacity-icoktb",
    "r-position-u8s1d",
    "r-width-l0gwng",
  ],
  "className": "r-borderColor-4a18lf r-borderWidth-1yadl64 r-left-1tsx3h3 r-opacity-icoktb r-position-u8s1d r-width-l0gwng",
}
`;

exports[`StyleSheet/createStyleResolver resolve with register, resolves to className 3`] = `
Object {
  "classList": Array [
    "r-borderColor-4a18lf",
    "r-borderWidth-1yadl64",
    "r-left-1tsx3h3",
    "r-opacity-icoktb",
    "r-position-u8s1d",
    "r-width-b8lwoo",
  ],
  "className": "r-borderColor-4a18lf r-borderWidth-1yadl64 r-left-1tsx3h3 r-opacity-icoktb r-position-u8s1d r-width-b8lwoo",
}
`;

exports[`StyleSheet/createStyleResolver resolve with register, resolves to mixed 1`] = `
Object {
  "classList": Array [
    "r-left-1tsx3h3",
    "r-opacity-icoktb",
    "r-position-u8s1d",
  ],
  "className": "r-left-1tsx3h3 r-opacity-icoktb r-position-u8s1d",
  "style": Object {
    "borderBottomColor": "rgba(255,0,0,1.00)",
    "borderBottomWidth": "0px",
    "borderLeftColor": "rgba(255,0,0,1.00)",
    "borderLeftWidth": "0px",
    "borderRightColor": "rgba(255,0,0,1.00)",
    "borderRightWidth": "0px",
    "borderTopColor": "rgba(255,0,0,1.00)",
    "borderTopWidth": "0px",
    "width": "100px",
  },
}
`;

exports[`StyleSheet/createStyleResolver resolve with register, resolves to mixed 2`] = `
Object {
  "classList": Array [
    "r-left-1tsx3h3",
    "r-opacity-icoktb",
    "r-position-u8s1d",
    "r-width-l0gwng",
  ],
  "className": "r-left-1tsx3h3 r-opacity-icoktb r-position-u8s1d r-width-l0gwng",
  "style": Object {
    "borderBottomColor": "rgba(255,0,0,1.00)",
    "borderBottomWidth": "0px",
    "borderLeftColor": "rgba(255,0,0,1.00)",
    "borderLeftWidth": "0px",
    "borderRightColor": "rgba(255,0,0,1.00)",
    "borderRightWidth": "0px",
    "borderTopColor": "rgba(255,0,0,1.00)",
    "borderTopWidth": "0px",
  },
}
`;

exports[`StyleSheet/createStyleResolver resolve with register, resolves to mixed 3`] = `
Object {
  "classList": Array [
    "r-left-1tsx3h3",
    "r-opacity-icoktb",
    "r-position-u8s1d",
  ],
  "className": "r-left-1tsx3h3 r-opacity-icoktb r-position-u8s1d",
  "style": Object {
    "borderBottomColor": "rgba(255,0,0,1.00)",
    "borderBottomWidth": "0px",
    "borderLeftColor": "rgba(255,0,0,1.00)",
    "borderLeftWidth": "0px",
    "borderRightColor": "rgba(255,0,0,1.00)",
    "borderRightWidth": "0px",
    "borderTopColor": "rgba(255,0,0,1.00)",
    "borderTopWidth": "0px",
    "width": "100px",
  },
}
`;

exports[`StyleSheet/createStyleResolver resolve without register, resolves to inline styles 1`] = `
Object {
  "classList": Array [],
  "className": "",
  "style": Object {
    "borderBottomColor": "rgba(255,0,0,1.00)",
    "borderBottomWidth": "0px",
    "borderLeftColor": "rgba(255,0,0,1.00)",
    "borderLeftWidth": "0px",
    "borderRightColor": "rgba(255,0,0,1.00)",
    "borderRightWidth": "0px",
    "borderTopColor": "rgba(255,0,0,1.00)",
    "borderTopWidth": "0px",
    "left": "50px",
    "opacity": 0.5,
    "position": "absolute",
    "width": "100px",
  },
}
`;

exports[`StyleSheet/createStyleResolver resolve without register, resolves to inline styles 2`] = `
Object {
  "classList": Array [],
  "className": "",
  "style": Object {
    "borderBottomColor": "rgba(255,0,0,1.00)",
    "borderBottomWidth": "0px",
    "borderLeftColor": "rgba(255,0,0,1.00)",
    "borderLeftWidth": "0px",
    "borderRightColor": "rgba(255,0,0,1.00)",
    "borderRightWidth": "0px",
    "borderTopColor": "rgba(255,0,0,1.00)",
    "borderTopWidth": "0px",
    "left": "50px",
    "opacity": 0.5,
    "position": "absolute",
    "width": "200px",
  },
}
`;

exports[`StyleSheet/createStyleResolver resolve without register, resolves to inline styles 3`] = `
Object {
  "classList": Array [],
  "className": "",
  "style": Object {
    "borderBottomColor": "rgba(255,0,0,1.00)",
    "borderBottomWidth": "0px",
    "borderLeftColor": "rgba(255,0,0,1.00)",
    "borderLeftWidth": "0px",
    "borderRightColor": "rgba(255,0,0,1.00)",
    "borderRightWidth": "0px",
    "borderTopColor": "rgba(255,0,0,1.00)",
    "borderTopWidth": "0px",
    "left": "50px",
    "opacity": 0.5,
    "position": "absolute",
    "width": "100px",
  },
}
`;
